--- a/sdi.qrc
+++ b/sdi.qrc
@@ -1,10 +1,10 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource>
-    <file>images/copy.png</file>
-    <file>images/cut.png</file>
-    <file>images/new.png</file>
-    <file>images/open.png</file>
-    <file>images/paste.png</file>
-    <file>images/save.png</file>
-</qresource>
+<RCC>
+    <qresource prefix="/">
+        <file>images/document-new.svg</file>
+        <file>images/document-open.svg</file>
+        <file>images/document-save.svg</file>
+        <file>images/edit-copy.svg</file>
+        <file>images/edit-cut.svg</file>
+        <file>images/edit-paste.svg</file>
+    </qresource>
 </RCC>
